# ChangeLog for media-sound/teamspeak2-server-bin
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/teamspeak2-server-bin/Attic/ChangeLog,v 1.23 2007/08/03 18:28:01 mjolnir Exp $

  03 Aug 2007; Martin Jackson <mjolnir@gentoo.org> metadata.xml:
  Take ownership

*teamspeak2-server-bin-2.0.23.19 (03 Aug 2007)

  03 Aug 2007; Martin Jackson <mjolnir@gentoo.org>
  +files/teamspeak2-server-ng.rc6, +teamspeak2-server-bin-2.0.23.19.ebuild:
  Bump for bug 187117; use new init script from 2.0.20.1-r1

  28 Apr 2007; Sven Wegener <swegener@gentoo.org>
  teamspeak2-server-bin-2.0.19.40.ebuild:
  Fix *initd, *confd and *envd calls (#173884, #174266)

  28 Apr 2007; Torsten Veller <tove@gentoo.org>
  teamspeak2-server-bin-2.0.20.1.ebuild,
  teamspeak2-server-bin-2.0.20.1-r1.ebuild:
  Use newinitd

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org>
  teamspeak2-server-bin-2.0.19.40.ebuild,
  teamspeak2-server-bin-2.0.20.1.ebuild,
  teamspeak2-server-bin-2.0.20.1-r1.ebuild:
  Fix SRC_URI and regenerate manifest.

  08 May 2006; <tcort@gentoo.org> teamspeak2-server-bin-2.0.20.1.ebuild,
  teamspeak2-server-bin-2.0.20.1-r1.ebuild:
  Removed INSTALL from dodoc.

*teamspeak2-server-bin-2.0.20.1-r1 (31 Jan 2005)

  31 Jan 2005; Christian Parpart <trapni@gentoo.org>
  +files/2.0.20.1-r1/teamspeak2-server.rc6,
  +teamspeak2-server-bin-2.0.20.1-r1.ebuild:
  According to bug 73847, added to init script and changed config file
  location from /var/lib/teamspeak-server/ to /etc/teamspeak-server/;
  also adding a sleep to svc restart() as it really takes some time
  sometimes (bug 73941).

  11 Jan 2005; Jeremy Huddleston <eradicator@gentoo.org>
  teamspeak2-server-bin-2.0.20.1.ebuild:
  emul-linux-x86 fixes.  Closes bug #73084.

  07 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org>
  teamspeak2-server-bin-2.0.19.40.ebuild,
  teamspeak2-server-bin-2.0.20.1.ebuild: