@@ -1,0 +1,6 @@
+MD5 a001067f1ddc191f9230314de4e4e28d server_linux-202322.tar.bz2 416618
+RMD160 bcf939431b42fd237c6bf57c34b9550f4a9ec564 server_linux-202322.tar.bz2 416618
+SHA256 c5fe5fa0091ab326db226c77015a9d284c0f172997a818fff5dbfa655d78ea9f server_linux-202322.tar.bz2 416618
+MD5 05e2bdec80eeed3d935eacb9ada3623e ts2_server_rc2_202319.tar.bz2 1155345
+RMD160 b941f5ec105bc86ba124d1a9a2763e0617a8f6bb ts2_server_rc2_202319.tar.bz2 1155345
+SHA256 56ae9f2cbb83c04102561ca377cedb6881579a80493b2b0ebf73afe2ac279a67 ts2_server_rc2_202319.tar.bz2 1155345
