@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/teamspeak2-server-bin
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/teamspeak2-server-bin/Attic/ChangeLog,v 1.23 2007/08/03 18:28:01 mjolnir Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/teamspeak2-server-bin/Attic/ChangeLog,v 1.24 2007/08/16 00:14:05 mjolnir Exp $
+
+*teamspeak2-server-bin-2.0.23.22 (16 Aug 2007)
+
+  16 Aug 2007; Martin Jackson <mjolnir@gentoo.org>
+  +teamspeak2-server-bin-2.0.23.22.ebuild:
+  Version bump to address additional security issue
 
   03 Aug 2007; Martin Jackson <mjolnir@gentoo.org> metadata.xml:
   Take ownership
